@@ -1,0 +1,26 @@
+/*
+   +----------------------------------------------------------------------+
+   | PHP version 4.0                                                      |
+   +----------------------------------------------------------------------+
+   | Copyright (c) 1997, 1998, 1999 The PHP Group                         |
+   +----------------------------------------------------------------------+
+   | This source file is subject to version 2.0 of the PHP license,       |
+   | that is bundled with this package in the file LICENSE, and is        |
+   | available at through the world-wide-web at                           |
+   | http://www.php.net/license/2_0.txt.                                  |
+   | If you did not receive a copy of the PHP license and are unable to   |
+   | obtain it through the world-wide-web, please send a note to          |
+   | license@php.net so we can mail you a copy immediately.               |
+   +----------------------------------------------------------------------+
+   | Authors: Rasmus Lerdorf                                              |
+   +----------------------------------------------------------------------+
+*/
+
+/* $Id: php_image.h,v 1.1 1999/09/02 11:58:23 thies Exp $ */
+
+#ifndef _IMAGE_H
+#define _IMAGE_H
+
+PHP_FUNCTION(getimagesize);
+
+#endif /* _IMAGE_H */
